Newsletter Section added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <p>Trek fly is one of the most popular Travel agency for those who want to explore the wold and try to make adventure</p>
                 </center>
                 <div class="destination-images">
+                    <div class="image-row">
                     <div class="destination-name">
                         <img src="./Images/Rectangle 5.png" alt="">
                         <span>Maldives</span>
@@ -96,6 +97,8 @@
                         <img src="./Images/Rectangle 8.png" alt="">
                         <span>Indonesia</span>
                     </div>
+                    </div>
+                    <div class="image-row">
                     <div class="destination-name">
                         <img src="./Images/Rectangle 6.png" alt="">
                         <span>Srilanka</span>
@@ -108,6 +111,8 @@
                         <img src="./Images/Rectangle 9.png" alt="">
                         <span>Kashmir</span>
                     </div>
+                </div>
+                <div class="image-row">
                     <div class="destination-name">
                         <img src="./Images/Rectangle 11.png" alt="">
                         <span>Bangladesh</span>
@@ -117,10 +122,84 @@
                         <span>Bandarban</span>
                     </div>
                 </div>
+                </div>
             </div>
         </section>
         <!-- Destination Section End -->
+
+        <!-- Choose Us section start -->
+        <section class="Choose-Us">
+            <div class="container">
+            <div class="choose-us-content">
+                <h2>Why Choose Us</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="service-cards">
+                <div class="card-row">
+                    <div class="card">
+                        <img src="./Images/hotel 1.png">
+                        <h3>Handpicked Hotels</h3>
+                        <p>We understand that your choice of accommodation plays a crucial role in creating memorable experiences during your travels. Our team has carefully selected a range of hotels to cater to different preferences and needs, ensuring a delightful stay for every traveler.</p>
+                    </div>
+                    <div class="card">
+                        <img src="./Images/Group 27.png">
+                        <h3>World Class Service</h3>
+                        <p>Experience unparalleled hospitality with our world-class service. At Trek Fly, we take pride in delivering exceptional service to ensure your satisfaction and comfort. Our dedicated team of professionals is committed to making your stay or experience memorable, catering to your every need with attention to detail and a passion for excellence.</p>
+                    </div>
+                </div>
+                <div class="card-row-2">
+                    <div class="card">
+                        <img src="./Images/price-tag 1.png">
+                        <h3>Best Price Guarantee</h3>
+                        <p>When you choose us, you're not just selecting quality, you're also choosing affordability. Our Best Price Guarantee ensures that you get the most competitive rates available. We are committed to providing you with the best value for your money, without compromising on the quality of service or experience.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <!-- chosse us section end -->
+
+        <section class="newsletter">
+            <div class="container">
+                <div class="newsletter-wrapper">
+                    <div class="subscription-form">
+                            <div class="form-content">
+                                <h2>Subscribe to Our Newsletter</h2>
+                                <p>Stay in the loop and never miss out on exciting updates, exclusive offers, and the latest news! </p>
+                            </div>
+                            <hr>
+                            <div class="form-input">
+                                    <input type="text" placeholder="Enter your name">
+                                    <input type="email" placeholder="Enter your email">
+                                    <button class="subscribe-button">Subscribe</button>
+                            </div>
+                     </div>
+                     <div class="promo-banner">
+                                <img src="./Images/Rectangle 8 (1).png">
+                                <div class="sticker">
+                                <p>www.trekfly.com</p>
+                                <h3>Save Upto 70%</h3>
+                                </div>
+                     </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <!--  -->
+    <!--Footer Section Start -->
+    <footer class="footer">
+        <center class="footer-content">
+            <div class="logo">
+                <img src="./Images/Group 40071 (2).png" alt="logo">
+                <h2>Trek <span>Fly</span></h2>
+            </div>
+            <p>Embark on a journey with trekfly, your gateway to extraordinary adventures and unforgettable experiences. Discover the world's wonders as we curate a collection of handpicked destinations, each offering a unique blend of culture, adventure, and relaxation.</p>
+            <div class="social-icon">
+
+            </div>
+        </center>
+
+    </footer>
+    <!-- Footer Section Eng -->
 </body>
 </html>
