Why choose us section design and cotent added in footer section

--- a/index.html
+++ b/index.html
@@ -128,34 +128,30 @@
         <!-- Destination Section End -->
 
         <!-- Choose Us section start -->
-        <section class="Choose-Us">
+        <section class="choose-us-section">
             <div class="container">
-            <div class="choose-us-content">
-                <h2>Why Choose Us</h2>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-            </div>
-            <div class="service-cards">
-                <div class="card-row">
-                    <div class="card">
-                        <img src="./Images/hotel 1.png">
-                        <h3>Handpicked Hotels</h3>
-                        <p>We understand that your choice of accommodation plays a crucial role in creating memorable experiences during your travels. Our team has carefully selected a range of hotels to cater to different preferences and needs, ensuring a delightful stay for every traveler.</p>
-                    </div>
-                    <div class="card">
-                        <img src="./Images/Group 27.png">
-                        <h3>World Class Service</h3>
-                        <p>Experience unparalleled hospitality with our world-class service. At Trek Fly, we take pride in delivering exceptional service to ensure your satisfaction and comfort. Our dedicated team of professionals is committed to making your stay or experience memorable, catering to your every need with attention to detail and a passion for excellence.</p>
-                    </div>
-                </div>
-                <div class="card-row-2">
-                    <div class="card">
-                        <img src="./Images/price-tag 1.png">
-                        <h3>Best Price Guarantee</h3>
-                        <p>When you choose us, you're not just selecting quality, you're also choosing affordability. Our Best Price Guarantee ensures that you get the most competitive rates available. We are committed to providing you with the best value for your money, without compromising on the quality of service or experience.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    <center class="choose-us-content">
+                        <h2>Why Choose Us</h2>
+                        <p>We pride ourselves on delivering exceptional value to our customers. Our commitment to excellence is evident in every aspect of our service. We provide high-quality services that not only meet but exceed your expectations. With a customer-centric approach, we tailor our solutions to your unique needs.</p>
+                    </center>
+                    <div class="service-cards">
+                            <div class="card-items item-1">
+                                <img src="./Images/hotel 1.png">
+                                <h3>Handpicked Hotels</h3>
+                                <p>We recognize that your accommodation choice plays a vital role in crafting memorable travel experiences. Carefully curating a selection of hotels to suit various preferences and needs, our team ensures a delightful stay for all travelers.</p>
+                            </div>
+                            <div class="card-items item-2">
+                                <img src="./Images/Group 27.png">
+                                <h3>World Class Service</h3>
+                                <p>Our commitment to exceptional service, satisfaction, and comfort is a source of pride. A devoted team of professionals ensures a memorable stay, catering to every detail with a passion for excellence.</p>
+                            </div>
+                            <div class="card-items item-3">
+                                <img src="./Images/price-tag 1.png">
+                                <h3>Best Price Guarantee</h3>
+                                <p>When you opt for us, it's not just about choosing quality; it's also about selecting affordability. Our Best Price Guarantee secures the most competitive rates, affirming our dedication to providing the best value for your money without compromising on service or experience quality.</p>
+                            </div>
+                     </div>
+               </div>
         </section>
 
         <!-- chosse us section end -->
@@ -189,13 +185,16 @@
     <!--Footer Section Start -->
     <footer class="footer">
         <center class="footer-content">
-            <div class="logo">
+            <div class="footer-logo">
                 <img src="./Images/Group 40071 (2).png" alt="logo">
                 <h2>Trek <span>Fly</span></h2>
             </div>
             <p>Embark on a journey with trekfly, your gateway to extraordinary adventures and unforgettable experiences. Discover the world's wonders as we curate a collection of handpicked destinations, each offering a unique blend of culture, adventure, and relaxation.</p>
             <div class="social-icon">
-
+                <img src="./Images/1.png">
+                <img src="./Images/2.png">
+                <img src="./Images/3.png">
+                <img src="./Images/4.png">
             </div>
         </center>
 
