--- a/index.html
+++ b/index.html
@@ -184,20 +184,21 @@
     </main>
     <!--Footer Section Start -->
     <footer class="footer">
-        <center class="footer-content">
+        <div class="footer-content">
             <div class="footer-logo">
                 <img src="./Images/Group 40071 (2).png" alt="logo">
                 <h2>Trek <span>Fly</span></h2>
             </div>
-            <p>Embark on a journey with trekfly, your gateway to extraordinary adventures and unforgettable experiences. Discover the world's wonders as we curate a collection of handpicked destinations, each offering a unique blend of culture, adventure, and relaxation.</p>
+            <p>Discover the world's wonders as we curate a collection of handpicked destinations, each offering a unique blend of culture, adventure, and relaxation.</p>
             <div class="social-icon">
                 <img src="./Images/1.png">
                 <img src="./Images/2.png">
                 <img src="./Images/3.png">
                 <img src="./Images/4.png">
             </div>
-        </center>
-
+            <hr>
+            <p class="copyright"> &copy2024 Trek Fly. All Rights Reserved.</p>
+        </div>
     </footer>
     <!-- Footer Section Eng -->
 </body>
