Destination Section Designed Finished

--- a/index.html
+++ b/index.html
@@ -80,11 +80,14 @@
             </div>
         </section>
         <!-- Popular Tour Section End -->
+
+
+
         <!-- Destination Section Start -->
         <section class="destination-section">
             <div class="container">
                 <center class="destination-content">
-                    <h2>Popular <span>Destination</span>we offer for all</h2>
+                    <h2>Popular <span>Destination</span> We Offer</h2>
                     <p>Trek fly is one of the most popular Travel agency for those who want to explore the wold and try to make adventure</p>
                 </center>
                 <div class="destination-images">
@@ -138,23 +141,29 @@
                             <div class="card-items item-1">
                                 <img src="./Images/hotel 1.png">
                                 <h3>Handpicked Hotels</h3>
-                                <p>We recognize that your accommodation choice plays a vital role in crafting memorable travel experiences. Carefully curating a selection of hotels to suit various preferences and needs, our team ensures a delightful stay for all travelers.</p>
+                                <p>We recognize that your accommodation choice plays a vital role in crafting memorable travel experiences. Carefully curating a selection of hotels to suit various preferences and needs.</p>
                             </div>
                             <div class="card-items item-2">
                                 <img src="./Images/Group 27.png">
                                 <h3>World Class Service</h3>
-                                <p>Our commitment to exceptional service, satisfaction, and comfort is a source of pride. A devoted team of professionals ensures a memorable stay, catering to every detail with a passion for excellence.</p>
+                                <p>We recognize that your accommodation choice plays a vital role in crafting memorable travel experiences. Carefully curating a selection of hotels to suit various preferences and needs</p>
                             </div>
                             <div class="card-items item-3">
                                 <img src="./Images/price-tag 1.png">
                                 <h3>Best Price Guarantee</h3>
-                                <p>When you opt for us, it's not just about choosing quality; it's also about selecting affordability. Our Best Price Guarantee secures the most competitive rates, affirming our dedication to providing the best value for your money without compromising on service or experience quality.</p>
+                                <p>When you opt for us, it's not just about choosing quality; it's also about selecting affordability. Our Best Price Guarantee secures the most competitive rates, affirming our dedication to providing the best value for your money.</p>
                             </div>
                      </div>
                </div>
         </section>
-
         <!-- chosse us section end -->
+
+        <!-- Perfect Place Section Start -->
+        <!-- Perfect Place Section End -->
+
+
+
+        <!-- Newsletter Section Start -->
 
         <section class="newsletter">
             <div class="container">
@@ -182,6 +191,11 @@
             </div>
         </section>
     </main>
+     
+    <!-- Newsletter Section End -->
+
+
+
     <!--Footer Section Start -->
     <footer class="footer">
         <div class="footer-content">
