Mendatory Section Completed with responsive

--- a/index.html
+++ b/index.html
@@ -159,6 +159,27 @@
         <!-- chosse us section end -->
 
         <!-- Perfect Place Section Start -->
+        <section class="perfect-place">
+            <div class="container">
+            <div class="perfect-place-wrapper">
+                <div class="perfect-place-content">
+                    <h2>A Simple Perfect Place To Get Lost</h2>
+                    <p>Discover the tranquility of hidden pathways, the beauty of untouched landscapes, and the serenity of nature's embrace. Immerse yourself in a world where time slows down, allowing you to escape the hustle and bustle. It's a place where every step reveals a new adventure, and every moment invites you to get lost in the simplicity of the perfect surroundings.</p>
+                    <ul>
+                        <li>Find peace in the whispers of rustling leaves.</li>
+                        <li>Uncover the secrets of winding trails that lead to unexpected wonders.</li>
+                    </ul>
+                    <button class="perfect-place-button">See More</button>
+                </div>
+                <div class="perfect-place-video">
+                    <video src="./video/video.mp4" controls></video>
+                    <span>Watch Mountain Video</span>
+                </div>
+            </div>
+            </div>
+        </section>
+
+
         <!-- Perfect Place Section End -->
 
 
