Bonus Section Added

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         </section>
         <!-- chosse us section end -->
 
+
         <!-- Perfect Place Section Start -->
         <section class="perfect-place">
             <div class="container">
@@ -183,6 +184,53 @@
         <!-- Perfect Place Section End -->
 
 
+
+        <!-- Testimoina Section  -->
+        <section class="testimonial-section">
+            <div class="container">
+                <div class="testimonial-content">
+                <h2>Happy <span>Travelers</span> Expression</h2>
+            </div>
+                <div class="testimonial-wrapper">
+                <div class="testimonial">
+                    <img src="./Images/user1.jpg" alt="Person 1">
+                    <h4>Isabella</h4>
+                    <p>"Trek Fly exceeded all expectations, offering an unforgettable adventure with impeccable service and breathtaking destinations."</p>
+                    <div class="rating">
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+            </div>
+                </div>
+                <div class="testimonial">
+                    <img src="./Images/user2.jpg" alt="Person 2">
+                    <h4>Jane Smith</h4>
+                    <p>"Trek Fly exceeded all expectations, seamlessly blending adventure and comfort for an unforgettable travel experience."</p>
+                    <div class="rating">
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9734;</span>
+            </div>
+                </div>
+                <div class="testimonial">
+                    <img src="./Images/user3.jpg" alt="Person 2">
+                    <h4>Sophia</h4>
+                    <p>"Trek Fly turned my travel dreams into reality, offering a perfect blend of adventure, comfort, and unparalleled experiences."</p>
+                    <div class="rating">
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+                <span>&#9733;</span>
+            </div>
+                </div>
+                </div>
+            </div>   
+        </section>
 
         <!-- Newsletter Section Start -->
 
